--- a/EU_map.html
+++ b/EU_map.html
@@ -47,10 +47,24 @@
         "type": "linear",
         "domain": [1000, 100000],
         "range": ["#6baed6", "#4292c6", "#2171b5", "#08519c", "#08306b"]
+      },
+      "title": "GDP per Capita (US$)"
+    },
+    "tooltip": [
+      {
+        "field": "properties.NAME",
+        "type": "nominal",
+        "title": "Country: "
+      },
+      {
+        "field": "GDP/Capita",
+        "type": "quantitative",
+        "title": "GDP per Capita (US$): "
       }
-    }
+    ]
   }
 }
+
 
 
 
