--- a/EU_map.html
+++ b/EU_map.html
@@ -7,6 +7,7 @@
   <script>
     const vegaLiteSpec = {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+  "title": "GDP per Capita in EU for 2021 Adjusted for Inflation",
   "data": {
     "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/ne_50m_admin_0_countries.json",
     "format": {
@@ -48,7 +49,11 @@
         "domain": [1000, 100000],
         "range": ["#6baed6", "#4292c6", "#2171b5", "#08519c", "#08306b"]
       },
-      "title": "GDP per Capita (US$)"
+      "title": "GDP per Capita (US$)",
+      "legend": {
+        "title": "GDP per Capita",
+        "orient": "right"
+      }
     },
     "tooltip": [
       {
@@ -62,9 +67,13 @@
         "title": "GDP per Capita (US$): "
       }
     ]
+  },
+  "config": {
+    "view": {
+      "stroke": "transparent"
+    }
   }
 }
-
 
 
 
