--- a/EU_map.html
+++ b/EU_map.html
@@ -7,7 +7,7 @@
   <script>
     const vegaLiteSpec = {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-  "title": "GDP per Capita in EU for 2021 Adjusted for Inflation",
+  "title": "2021 EU GDP per Capita Adjusted for Inflation",
   "data": {
     "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/ne_50m_admin_0_countries.json",
     "format": {
@@ -30,7 +30,7 @@
       }
     }
   ],
-  "width": 800,
+  "width": 600,
   "height": 600,
   "projection": {
     "type": "mercator"
