--- a/EU_map.html
+++ b/EU_map.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.25.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.15.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.22.2"></script>
+</head>
 <body>
-  <h1>EU GDP</h1>
-  <div id="vis"></div>
-
+  <div id="vis"/>
   <script>
-    const vegaLiteSpec = {
+    const spec = {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
   "title": "2021 EU GDP per Capita Adjusted for Inflation",
   "data": {
     "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/ne_50m_admin_0_countries.json",
-    "format": {
-      "type": "topojson",
-      "feature": "ne_50m_admin_0_countries"
-    }
+    "format": {"type": "topojson", "feature": "ne_50m_admin_0_countries"}
   },
   "transform": [
     {
@@ -21,9 +21,7 @@
       "from": {
         "data": {
           "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/eu_country_gdp.csv",
-          "format": {
-            "type": "csv"
-          }
+          "format": {"type": "csv"}
         },
         "key": "country",
         "fields": ["GDP/Capita"]
@@ -32,14 +30,8 @@
   ],
   "width": 600,
   "height": 600,
-  "projection": {
-    "type": "mercator"
-  },
-  "mark": {
-    "type": "geoshape",
-    "stroke": "black",
-    "strokeWidth": 1
-  },
+  "projection": {"type": "mercator"},
+  "mark": {"type": "geoshape", "stroke": "black", "strokeWidth": 1},
   "encoding": {
     "color": {
       "field": "GDP/Capita",
@@ -50,17 +42,10 @@
         "range": ["#6baed6", "#4292c6", "#2171b5", "#08519c", "#08306b"]
       },
       "title": "GDP per Capita (US$)",
-      "legend": {
-        "title": "GDP per Capita",
-        "orient": "right"
-      }
+      "legend": {"title": "GDP per Capita", "orient": "right"}
     },
     "tooltip": [
-      {
-        "field": "properties.NAME",
-        "type": "nominal",
-        "title": "Country: "
-      },
+      {"field": "properties.NAME", "type": "nominal", "title": "Country: "},
       {
         "field": "GDP/Capita",
         "type": "quantitative",
@@ -68,18 +53,9 @@
       }
     ]
   },
-  "config": {
-    "view": {
-      "stroke": "transparent"
-    }
-  }
-}
-
-
-
-    vegaEmbed("#vis", vegaLiteSpec)
-      .then((result) => console.log(result))
-      .catch(console.error);
+  "config": {"view": {"stroke": "transparent"}}
+};
+    vegaEmbed("#vis", spec, {mode: "vega-lite"}).then(console.log).catch(console.warn);
   </script>
 </body>
 </html>
