--- a/index.html
+++ b/index.html
@@ -1,89 +1,160 @@
-{
-  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-  "title": "EU Growth Rates from 1994 to 2019",
-  "config": {
-    "view": {"width": 600, "height": 450}
-  },
-  "data": {
-    "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/eu_growth.csv"
-  },
-  "mark": {
-    "type": "line",
-    "point": true
-  },
-  "encoding": {
-    "x": {
-      "field": "year",
-      "type": "temporal",
-      "axis": {
-        "title": "Year",
-        "labelFontSize": 14, // Increase label font size
-        "titleFontSize": 16 // Increase title font size
-      }
-    },
-    "y": {
-      "field": "value",
-      "type": "quantitative",
-      "axis": {
-        "title": "Growth Rate (%)",
-        "labelFontSize": 14, // Increase label font size
-        "titleFontSize": 16 // Increase title font size
-      },
-      "scale": {"domain": [-20, 20]}
-    },
-    "color": {
-      "field": "country",
-      "type": "nominal",
-      "legend": null,
-      "scale": {"scheme": "category10"}
-    }
-  },
-  "transform": [
-    {
-      "filter": {
-        "selection": "country_filter"
-      }
-    }
-  ],
-  "selection": {
-    "country_filter": {
-      "type": "single",
-      "fields": ["country"],
-      "init": {"country": "Average"},
-      "bind": {
-        "input": "select",
-        "options": [
-          "Average",
-          "Austria",
-          "Belgium",
-          "Bulgaria",
-          "Cyprus",
-          "Czechia",
-          "Germany",
-          "Denmark",
-          "Spain",
-          "Estonia",
-          "Finland",
-          "France",
-          "Greece",
-          "Croatia",
-          "Hungary",
-          "Ireland",
-          "Italy",
-          "Lithuania",
-          "Luxembourg",
-          "Latvia",
-          "Malta",
-          "Netherlands",
-          "Poland",
-          "Portugal",
-          "Romania",
-          "Slovakia",
-          "Slovenia",
-          "Sweden"
-        ],
-        "name": "Country Selection"
-      }
-    }
-  }
-}
+<!DOCTYPE html>
+<html>
+
+<head>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.25.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.15.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.22.2"></script>
+</head>
+
+<body>
+  <div id="visualization1">
+    <script>
+      const spec1 = {
+        "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+        "title": "2021 EU GDP per Capita Adjusted for Inflation",
+        "data": {
+          "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/ne_50m_admin_0_countries.json",
+          "format": {
+            "type": "topojson",
+            "feature": "ne_50m_admin_0_countries"
+          }
+        },
+        "transform": [{
+          "lookup": "properties.NAME",
+          "from": {
+            "data": {
+              "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/eu_country_gdp.csv",
+              "format": {
+                "type": "csv"
+              }
+            },
+            "key": "country",
+            "fields": ["GDP/Capita"]
+          }
+        }],
+        "width": 600,
+        "height": 600,
+        "projection": {
+          "type": "mercator"
+        },
+        "mark": {
+          "type": "geoshape",
+          "stroke": "black",
+          "strokeWidth": 1
+        },
+        "encoding": {
+          "color": {
+            "field": "GDP/Capita",
+            "type": "quantitative",
+            "scale": {
+              "type": "linear",
+              "domain": [10000, 100000],
+              "range": ["#6baed6", "#4292c6", "#2171b5", "#08519c", "#08306b"]
+            },
+            "title": "GDP per Capita (US$)",
+            "legend": {
+              "title": "GDP per Capita",
+              "orient": "right"
+            }
+          },
+          "tooltip": [{
+            "field": "properties.NAME",
+            "type": "nominal",
+            "title": "Country: "
+          }, {
+            "field": "GDP/Capita",
+            "type": "quantitative",
+            "title": "GDP per Capita (US$): "
+          }]
+        },
+        "config": {
+          "view": {
+            "stroke": "transparent"
+          }
+        }
+      };
+      vegaEmbed("#visualization1", spec1, {
+        mode: "vega-lite"
+      }).then(console.log).catch(console.warn);
+    </script>
+  </div>
+
+  <div id="visualization2">
+    <script>
+      const spec2 = {
+        "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+        "title": "EU Growth Rates from 1994 to 2019",
+        "config": {
+          "view": {
+            "width": 600,
+            "height": 450
+          }
+        },
+        "data": {
+          "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/eu_growth.csv"
+        },
+        "mark": {
+          "type": "line",
+          "point": true
+        },
+        "encoding": {
+          "x": {
+            "field": "year",
+            "type": "temporal",
+            "axis": {
+              "title": "Year",
+              "labelFontSize": 12,
+              "titleFontSize": 14
+            }
+          },
+          "y": {
+            "field": "value",
+            "type": "quantitative",
+            "axis": {
+              "title": "Growth Rate (%)",
+              "labelFontSize": 12,
+              "titleFontSize": 14
+            },
+            "scale": {
+              "domain": [-20, 20]
+            }
+          },
+          "color": {
+            "field": "country",
+            "type": "nominal",
+            "legend": null,
+            "scale": {
+              "scheme": "category10"
+            }
+          }
+        },
+        "transform": [{
+          "filter": {
+            "selection": "country_filter"
+          }
+        }],
+        "selection": {
+          "country_filter": {
+            "type": "single",
+            "fields": ["country"],
+            "init": {
+              "country": "Average"
+            },
+            "bind": {
+              "input": "select",
+              "options": ["Average", "Austria", "Belgium", "Bulgaria", "Cyprus", "Czechia", "Germany", "Denmark", "Spain", "Estonia", "Finland", "France", "Greece", "Croatia", "Hungary", "Ireland", "Italy", "Lithuania", "Luxembourg", "Latvia", "Malta", "Netherlands", "Poland", "Portugal", "Romania", "Slovakia", "Slovenia", "Sweden"
+              ],
+              "name": "Country Selection"
+            }
+          }
+        }
+      };
+      vegaEmbed("#visualization2", spec2, {
+        mode: "vega-lite"
+      }).then(console.log).catch(console.warn);
+    </script>
+  </div>
+</body>
+
+</html>
