--- a/linechart.html
+++ b/linechart.html
@@ -15,72 +15,101 @@
   "data": {
     "url": "https://raw.githubusercontent.com/GarethFrederick/FIT3179/main/Data/eu_growth.csv"
   },
-  "mark": {"type": "line", "point": true},
-  "encoding": {
-    "x": {
-      "field": "year",
-      "type": "temporal",
-      "axis": {"title": "Year", "labelFontSize": 12, "titleFontSize": 14}
-    },
-    "y": {
-      "field": "value",
-      "type": "quantitative",
-      "axis": {
-        "title": "Growth Rate (%)",
-        "labelFontSize": 12,
-        "titleFontSize": 14
+  "layer": [
+    {
+      "mark": {"type": "line", "point": true},
+      "encoding": {
+        "x": {
+          "field": "year",
+          "type": "temporal",
+          "axis": {"title": "Year", "labelFontSize": 12, "titleFontSize": 14}
+        },
+        "y": {
+          "field": "value",
+          "type": "quantitative",
+          "axis": {
+            "title": "Growth Rate (%)",
+            "labelFontSize": 12,
+            "titleFontSize": 14
+          },
+          "scale": {"domain": [-20, 20]}
+        },
+        "color": {
+          "field": "country",
+          "type": "nominal",
+          "legend": null,
+          "scale": {"scheme": "category10"}
+        },
+        "tooltip": [
+          {"field": "country", "title": "Country/Measure: "},
+          {
+            "field": "year",
+            "title": "Year: ",
+            "type": "temporal",
+            "timeUnit": "year"
+          },
+          {"field": "value", "title": "Growth Rate (%): ", "format": ".3f"}
+        ]
       },
-      "scale": {"domain": [-20, 20]}
+      "transform": [{"filter": {"selection": "country_filter"}}],
+      "selection": {
+        "country_filter": {
+          "type": "single",
+          "fields": ["country"],
+          "init": {"country": "Average"},
+          "bind": {
+            "input": "select",
+            "options": [
+              "Average",
+              "Austria",
+              "Belgium",
+              "Bulgaria",
+              "Cyprus",
+              "Czechia",
+              "Germany",
+              "Denmark",
+              "Spain",
+              "Estonia",
+              "Finland",
+              "France",
+              "Greece",
+              "Croatia",
+              "Hungary",
+              "Ireland",
+              "Italy",
+              "Lithuania",
+              "Luxembourg",
+              "Latvia",
+              "Malta",
+              "Netherlands",
+              "Poland",
+              "Portugal",
+              "Romania",
+              "Slovakia",
+              "Slovenia",
+              "Sweden"
+            ],
+            "name": "Country Selection"
+          }
+        }
+      }
     },
-    "color": {
-      "field": "country",
-      "type": "nominal",
-      "legend": null,
-      "scale": {"scheme": "category10"}
-    }
-  },
-  "transform": [{"filter": {"selection": "country_filter"}}],
-  "selection": {
-    "country_filter": {
-      "type": "single",
-      "fields": ["country"],
-      "init": {"country": "Average"},
-      "bind": {
-        "input": "select",
-        "options": [
-          "Average",
-          "Austria",
-          "Belgium",
-          "Bulgaria",
-          "Cyprus",
-          "Czechia",
-          "Germany",
-          "Denmark",
-          "Spain",
-          "Estonia",
-          "Finland",
-          "France",
-          "Greece",
-          "Croatia",
-          "Hungary",
-          "Ireland",
-          "Italy",
-          "Lithuania",
-          "Luxembourg",
-          "Latvia",
-          "Malta",
-          "Netherlands",
-          "Poland",
-          "Portugal",
-          "Romania",
-          "Slovakia",
-          "Slovenia",
-          "Sweden"
-        ],
-        "name": "Country Selection"
+    {
+      "mark": {
+        "type": "text",
+        "align": "right",
+        "baseline": "middle",
+        "dx": 10,
+        "fontSize": 11.5
+      },
+      "encoding": {
+        "x": {"value": 205},
+        "y": {"value": 310},
+        "text": {"value": "2008 Global Financial Crisis"},
+        "color": {"value": "black"}
       }
     }
-  }
+  ]
 };
     vegaEmbed("#vis", spec, {mode: "vega-lite"}).then(console.log).catch(console.warn);
   </script>
